feat: add global exception handling and logging functionality